# Techcom-View-SA

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  __init__.py  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: __init__.py  expanded_telecom_data.csv  south_america_cells.csv
